--- a/2021-1-STL 화56목56/2021-1-STL 화56목56.vcxproj
+++ b/2021-1-STL 화56목56/2021-1-STL 화56목56.vcxproj
@@ -146,6 +146,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="save.h" />
+    <ClInclude Include="String.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
