--- a/2021-1-STL 화56목56/2021-1-STL 화56목56.vcxproj
+++ b/2021-1-STL 화56목56/2021-1-STL 화56목56.vcxproj
@@ -102,7 +102,7 @@
       <SDLCheck>false</SDLCheck>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <LanguageStandard>stdcpplatest</LanguageStandard>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
